Expand out the single-table-design api with a v. basic use case implementation
